--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"/>
+<html lang="fr">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -7,7 +7,6 @@
     <link rel="stylesheet" media="all" type="text/css" href="assets/css/style.css"/>
   </head>
   <body>
-    <img src="assets/image/voiture3.jpg"
-    width="850" height="475"/>
+    <img src="assets/image/voiture3.jpg"/>
   </body>
 </html>
